--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,4 +1,8 @@
 ---
+import type { ImageMetadata } from "astro";
+import { Image } from "astro:assets";
+import ProjectCardSvg from "../components/ProjectCardSvg.astro";
+
 interface Props {
   index: number;
   project: {
@@ -6,36 +10,39 @@ interface Props {
     desc: string;
     liveLink: string;
     repoLink: string;
+    imgPath: string;
+    icons: {
+      icon1: string | null;
+      icon2: string | null;
+      icon3: string | null;
+    };
   };
 }
 
 const { index, project } = Astro.props;
+const images = import.meta.glob<{ default: ImageMetadata }>(
+  "/src/assets/*.{jpeg,jpg,png,gif,webp}",
+);
+
+console.log(images);
+
+if (!images[project.imgPath])
+  throw new Error(
+    `"${project.imgPath}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif,webp}"`,
+  );
 ---
 
 <div
-  style={{
-    marginTop: `${index * 20}px`,
-    marginLeft: `${index * 20}px`,
-  }}
-  class="grid h-[600px] w-full grid-cols-2 items-center gap-4 justify-self-center rounded-3xl bg-gray-100 px-4 shadow-[rgba(149,157,165,0.2)_0px_8px_24px]"
+  class="relative grid h-[600px] w-full grid-cols-2 items-center gap-6 justify-self-center rounded-3xl bg-gray-100 px-4 shadow-[rgba(149,157,165,0.2)_0px_8px_24px]"
 >
   <div
-    class="flex h-60 w-96 flex-col justify-center gap-4 justify-self-end text-end"
+    class="flex h-60 w-96 flex-col justify-center gap-2 justify-self-end text-end"
   >
     <h2 class="text-2xl font-semibold">{project.title}</h2>
-    <div class="relative flex h-6 justify-end">
-      <svg
-        class="icon icon-tabler icon-tabler-brand-html5 absolute -top-2 aspect-square w-10"
-        viewBox="0 0 24 24"
-        stroke-width="2"
-        stroke="currentColor"
-        fill="none"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-          d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z"></path><path
-          d="M15.5 8h-7l.5 4h6l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5"></path></svg
-      >
+    <div class="relative flex h-8 justify-end gap-2">
+      <div class="size-8" title={project.icons.icon3}></div>
+      <div class="size-8" title={project.icons.icon2}></div>
+      <div class="size-8" title={project.icons.icon1}></div>
     </div>
     <p>
       {project.desc}
@@ -43,13 +50,25 @@ const { index, project } = Astro.props;
     <div class="flex justify-end gap-4">
       <a
         href={project.liveLink}
-        class="rounded-lg bg-black px-4 py-1 font-semibold text-white">Live</a
+        target="_blank"
+        class="rounded-lg bg-gray-100 px-4 py-1 font-semibold text-gray-600 outline -outline-offset-[3px] outline-gray-600 transition hover:scale-105 active:scale-100"
+        >Live</a
       >
       <a
         href={project.repoLink}
-        class="rounded-lg bg-black px-4 py-1 font-semibold text-white">Code</a
+        target="_blank"
+        class="rounded-lg bg-gray-600 px-4 py-1 font-semibold text-white transition hover:scale-105 active:scale-100"
+        >Code</a
       >
     </div>
   </div>
-  <div class="aspect-video w-full rounded-2xl bg-black/10"></div>
+  <div class="aspect-video w-full rounded-2xl bg-gray-300 p-1.5">
+    <Image
+      src={images[project.imgPath]()}
+      alt="Project Image"
+      class="rounded-xl"
+    />
+  </div>
+
+  <ProjectCardSvg index={index} />
 </div>
