--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,3 +33,16 @@ const { title } = Astro.props;
     font-family: inter, system-ui, sans-serif;
   }
 </style>
+
+<script>
+  import Lenis from "@studio-freight/lenis";
+
+  const lenis = new Lenis();
+
+  function raf(time: number) {
+    lenis.raf(time);
+    requestAnimationFrame(raf);
+  }
+
+  requestAnimationFrame(raf);
+</script>
