--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,4 +1,6 @@
 <nav class="fixed z-50 flex w-full max-w-screen-lg justify-between p-4">
-  <a href="/">Home</a>
-  <a>Contact</a>
+  <button id="homeButton">Home</button>
+  <button id="contactButton">Contact</button>
 </nav>
+
+<script></script>
