--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,5 +44,13 @@ const { title } = Astro.props;
     requestAnimationFrame(raf);
   }
 
+  document.getElementById("homeButton")?.addEventListener("click", () => {
+    lenis.scrollTo("top");
+  });
+
+  document.getElementById("contactButton")?.addEventListener("click", () => {
+    lenis.scrollTo("bottom");
+  });
+
   requestAnimationFrame(raf);
 </script>
