--- a/src/components/AboutSvg.astro
+++ b/src/components/AboutSvg.astro
@@ -1,6 +1,6 @@
 <div
   id="aboutLines"
-  class="pointer-events-none absolute bottom-0 grid h-[150vh] grid-cols-1 justify-center justify-items-center overflow-x-clip"
+  class="pointer-events-none absolute bottom-0 grid hidden h-[150vh] grid-cols-1 justify-center justify-items-center overflow-x-clip min-[900px]:block"
 >
   <svg
     class="h-full"
