Hide HeaderSvg at small screens

--- a/src/components/HeaderSvg.astro
+++ b/src/components/HeaderSvg.astro
@@ -1,6 +1,6 @@
 <div
   id="homeSvgContainer"
-  class="absolute top-0 -z-10 grid h-full w-full items-center justify-items-center overflow-x-clip"
+  class="absolute top-0 -z-10 grid h-full w-full items-center justify-items-center overflow-x-clip max-[900px]:hidden"
 >
   <svg
     id="homeMainSvg"
