Hide ProjectsSvg at small screens

--- a/src/components/ProjectsSvg.astro
+++ b/src/components/ProjectsSvg.astro
@@ -1,5 +1,5 @@
 <div
-  class="pointer-events-none sticky top-0 z-50 col-start-1 col-end-1 row-start-1 grid w-full justify-center justify-items-center overflow-x-clip"
+  class="pointer-events-none sticky top-0 z-50 col-start-1 col-end-1 row-start-1 grid w-full justify-center justify-items-center overflow-x-clip max-[900px]:hidden"
 >
   <div
     class="absolute top-[-220px] grid h-screen min-h-[800px] w-screen justify-center overflow-x-clip"
@@ -129,7 +129,7 @@
   path {
     stroke-dasharray: 1;
     stroke-dashoffset: 1;
-    /* visibility: hidden; */
+    visibility: hidden;
   }
 </style>
 
