Hide AboutSvg at small screens

--- a/src/components/AboutSvg.astro
+++ b/src/components/AboutSvg.astro
@@ -1,6 +1,6 @@
 <div
   id="aboutLines"
-  class="pointer-events-none absolute bottom-0 grid hidden h-[150vh] grid-cols-1 justify-center justify-items-center overflow-x-clip min-[900px]:block"
+  class="pointer-events-none absolute bottom-0 grid h-[150vh] grid-cols-1 justify-center justify-items-center overflow-x-clip max-[900px]:hidden"
 >
   <svg
     class="h-full"
@@ -59,7 +59,7 @@
   path {
     stroke-dasharray: 1;
     stroke-dashoffset: 1;
-    /* visibility: hidden; */
+    visibility: hidden;
   }
 </style>
 
