Remove unused index

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -85,7 +85,7 @@ const projects = [
     visibility: "visible",
   });
 
-  ["#card0", "#card1", "#card2"].forEach((card, index) => {
+  ["#card0", "#card1", "#card2"].forEach((card) => {
     inView(
       card,
       () => {
