--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,12 @@ const { title } = Astro.props;
 </html>
 
 <style is:global>
-  @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+  @font-face {
+    font-family: "Inter";
+    src: url("/fonts/Inter-VariableFont_slnt,wght.woff2") format("woff2");
+    font-weight: 100 1000;
+    font-display: swap;
+  }
 
   html {
     font-family: inter, system-ui, sans-serif;
