--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Projects from "../components/Projects.astro";
 import About from "../components/About.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Clara Smyth.">
   <Header />
 
   <Projects />
